Show admin include/exclude tex commands

--- a/docs/user-guide.tex
+++ b/docs/user-guide.tex
@@ -8,7 +8,8 @@
 
 \usepackage{supertabular}
 \usepackage{comment}
-\includecomment{admin}
+\excludecomment{admin}
+% \includecomment{admin}
 
 \begin{document}
 
