Fix typo in docs

--- a/docs/user-guide.tex
+++ b/docs/user-guide.tex
@@ -63,7 +63,7 @@ NOTE: If your edits need to be approved, you won't see them immediately. In this
 \item If you cannot see the record you want to edit, click on the \textbf{View} dropdown and select the \hyperref[sec:views]{data view} that will show you the record you need.
 \item Alternatively, use the \textbf{Search} box at the top of the page to find your record.
 \item Click on the number listed in the \textbf{Serial} column of the record you want to edit.
-\item Click the \textbf{Delete} button. If you do not have this buytton then you do not have permission to delete records.
+\item Click the \textbf{Delete} button. If you do not have this button then you do not have permission to delete records.
 \item To confirm you want to delete the record, click the \textbf{Delete} button in the pop-up box that appears on your screen. 
 \end{enumerate}
 \subsection[view earlier versions of a record]{view earlier versions of a record}
