Remove reference to GADS in docs

--- a/docs/user-guide.tex
+++ b/docs/user-guide.tex
@@ -640,7 +640,7 @@ One set of metrics consists of several points to plot a graph against. Only user
 
 
 \clearpage\section[MESSAGES: Emailing other users]{MESSAGES: Emailing other users}
-\subsection[email another user from gads ]{email another user from gads }
+\subsection[email another user from linkspace]{email another user from linkspace}
 If the names of other users are included in your data records as a person field, you can access their email address by clicking on their name in the record. If you have an email client installed on your device you can then click on the email address to create a new email message addressed to that user. \ 
 
 \subsection[email a group of users]{email a group of users}
@@ -774,7 +774,7 @@ NOTE: The search can be run faster when you search using the beginning of someth
 
 \begin{admin}
 \clearpage\section[Linkspace HOMEPAGE]{Linkspace HOMEPAGE}
-\subsection[configuring your gads homepage]{configuring your gads homepage}
+\subsection[configuring your linkspace homepage]{configuring your linkspace homepage}
 You can add text and links to your Linkspace homepage.
 
 \begin{enumerate}
