Improve description of approve existing

--- a/docs/user-guide.tex
+++ b/docs/user-guide.tex
@@ -370,7 +370,7 @@ NOTE: When you set up a new user you should allocate them to one of the groups y
 
     \item \hyperref[subsec:addfield]{Add a new data field}.
     \item Under \textbf{Permissions} on the data field screen, click \textbf{Add new group}.
-    \item For each new group you can select what users of that group can do on that field i.e. Read values; Enter values for new records; Edit values of existing records; Approve values in new records; Approve values in existing records; Enter values for new records without requiring approval; Edit values of existing records without requiring approval.
+    \item For each new group you can select what users of that group can do on that field i.e. Read values; Enter values for new records; Edit values of existing records; Approve values in new records; Approve changes in existing records; Enter values for new records without requiring approval; Edit values of existing records without requiring approval.
     \item Click \textbf{Save}.
 
 \begin{notebox}
