Minor doc update for filter

--- a/docs/user-guide.tex
+++ b/docs/user-guide.tex
@@ -198,7 +198,7 @@ When you want to display only records that begin with a certain word or group of
 
 \subsection[apply more than one filter to a view]{apply more than one filter to a view}
 \begin{enumerate}
-\item You can apply several filters at the same time. For example, if you wanted to display projects that are in Australia and South Africa, you would add an OR filter, because you want to view all records where the value for Country is either South Africa or Australia. To do this select \textbf{OR} from the top of the filter box and then click the \textbf{Add rule}.\newline
+\item You can apply several filters at the same time. For example, if you wanted to display projects that are in Australia or South Africa, you would add an OR filter, because you want to view all records where the value for Country is either South Africa or Australia. To do this select \textbf{OR} from the top of the filter box and then click the \textbf{Add rule}.\newline
 \includegraphics{userguide-img/userguide-img003.png}
  
 
