Minor filter doc update

--- a/docs/user-guide.tex
+++ b/docs/user-guide.tex
@@ -158,7 +158,7 @@ Filters can be used to only show records (rows) that meet specific criteria, mak
 \item On the Customise view page, type a name for this view in the \textbf{View name} box.
 \item Check the boxes of the fields that you want to be able to see in your final filtered list. (Click on the check box next to \textbf{Field name} to select or deselect all of them.)
 \item Now create your filters using the \textbf{Filters} form.
-\item Start by selecting the field you want the filter to apply to from the dropdown box. (Note that if you change the field you will need to re-enter your search criteria).
+\item Start by selecting the field you want the filter to apply to from the dropdown box. (Note that if you re-select the field name that you are using, then you will need to re-enter your search value for that particular field).
 \item Use the next two boxes in the row to set the criteria for the filter. FOR EXAMPLE: If you only want to display projects that are in Australia, you would select Country from the list of data fields, then select equals from the second box, and then type Australia into the final value box. \newline
 \includegraphics[width=15.921cm,height=3.069cm]{userguide-img/userguide-img002.png}
  
